src/syntax_analysis/expressions/pratt_parsing/infix_expression/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__pratt_parsing__infix_expression__tests__test_syntax_analysis_for_infix_expression_case2.snap
---
source: src/syntax_analysis/expressions/pratt_parsing/infix_expression/tests.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand_expression": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "6"
                  }
                }
              }
            },
            "operator_token": "MINUS",
            "right_hand_expression": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "6"
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
